<resources>
    <string name="app_name">American FootBall</string>
    <string name="kick">Kick</string>
    <string name="touch_down">Touch Down</string>
    <string name="away_default">0</string>
    <string name="away">Away</string>
    <string name="home">Home</string>
    <string name="start_over">Start Over</string>
    <string name="two_point_conversion">Two Point Conversion</string>
    <string name="field_goal">Field Goal</string>
    <string name="safety">Safety</string>
</resources>
