<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/home"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor='@android:color/black'/>

            <TextView
                android:id="@+id/home_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/away_default"
                android:textAlignment="center"
                android:textSize="48sp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/buttonColor"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="touchDownForHome"
                android:text="@string/touch_down"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:background="@color/buttonColor"
                android:textColor="@android:color/white"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="kickHome"
                android:text="@string/kick"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:background="@color/buttonColor"
                android:textColor="@android:color/white"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="twoPointConversion"
                android:text="@string/two_point_conversion"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:background="@color/buttonColor"
                android:textColor="@android:color/white"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="FieldGoalHome"
                android:text="@string/field_goal"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:background="@color/buttonColor"
                android:textColor="@android:color/white"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SafetyHome"
                android:text="@string/safety"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:background="@color/buttonColor"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/away"
                android:textAlignment="center"
                android:layout_marginTop="16dp"
                android:textSize="20dp"
                android:textColor="@android:color/black"

                />

            <TextView
                android:id="@+id/away_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/away_default"
                android:textAlignment="center"
                android:textSize="48sp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/buttonColor"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="touchDownAway"
                android:text="@string/touch_down"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:background="@color/buttonColor"
                android:textColor="@android:color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="kickAwayPoint"
                android:text="@string/kick"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:background="@color/buttonColor"
                android:textColor="@android:color/white"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="twoPointConversionAway"
                android:text="@string/two_point_conversion"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:background="@color/buttonColor"
                android:textColor="@android:color/white"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="FieldGoalAway"
                android:text="@string/field_goal"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:background="@color/buttonColor"
                android:textColor="@android:color/white"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SafetyAway"
                android:text="@string/safety"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:background="@color/buttonColor"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="reset"
        android:text="@string/start_over"
        android:layout_marginBottom="28dp"
        android:background="@color/offWhite"
        android:textColor="@color/buttonColor"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"/>

</LinearLayout>